shared-business-logics/services/centralized-dashboard/Backend/Java/monitoring-services/centralized-performance-metrics/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centralized-performance-metrics
  namespace: centralized-dashboard
  labels:
    app: centralized-performance-metrics
    team: team-f-centralized-dashboard
spec:
  type: ClusterIP
  selector:
    app: centralized-performance-metrics
  ports:
  - name: http
    port: 8082
    targetPort: 8082
    protocol: TCP
  sessionAffinity: None
